--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Flask-Cors==3.0.10
 Flask-MySQLdb==0.2.0
 mysqlclient==1.3.13
 gevent~=22.10.2
+psycopg2==2.9.5
 psutil~=5.9.5
 pymemcache~=4.0.0
 python-dateutil~=2.8.2
